Working docker file