@@ -1,5 +1,5 @@
-FROM java:8
-WORKDIR /
-ADD DataMigration/build/libs/DataMigration.jar DataMigration.jar
+FROM openjdk:8-jre-slim
 EXPOSE 8080
-CMD java - jar DataMigration.jar user
+RUN mkdir /app
+COPY DataMigration/build/libs/DataMigration.jar /app/DataMigration.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/DataMigration.jar"]
